# Fabricating-and-Deforming-Models

./: CMakeLists.txt
apps/: CMakeLists.txt  main.cpp
apps/basic_app/: CMakeLists.txt
apps/basic_app/src/: main.cpp
ext/pardiso/: pardiso.lic
libs/: AdamMinimizer.h  AuxBendingNormal.cpp  AuxBendingNormal.h  AuxCylinder.cpp  AuxCylinder.h  AuxSpherePerHinge.cpp  AuxSpherePerHinge.h  AuxVariables.cpp  AuxVariables.h  BendingEdge.cpp  BendingEdge.h  BendingNormal.cpp  BendingNormal.h  CMakeLists.txt  EigenSparseLinearEquationSolver.cpp  EigenSparseLinearEquationSolver.h  FixAllVertices.cpp  FixAllVertices.h  FixChosenConstraints.cpp  FixChosenConstraints.h  FixChosenNormals.cpp  FixChosenNormals.h  FixChosenSpheres.cpp  FixChosenSpheres.h  FixChosenVertices.cpp  FixChosenVertices.h  GradientDescentMinimizer.h  GroupNormals.cpp  GroupNormals.h  GroupSpheres.cpp  GroupSpheres.h  Grouping.cpp  Grouping.h  Minimizer.cpp  Minimizer.h  NewtonMinimizer.h  ObjectiveFunction.cpp  ObjectiveFunction.h  OptimizationUtils.h  ROY_soup2D.cpp  (+13 more)
libs/cudaLibrary/: CMakeLists.txt  CudaBasics.cuh  CudaBasics.h  Cuda_AdamMinimizer.cu  Cuda_AdamMinimizer.cuh  Cuda_AuxBendingNormal.cu  Cuda_AuxBendingNormal.cuh  Cuda_AuxBendingNormal.h  Cuda_Basics.cu  Cuda_Basics.cuh  SD.cu  (+7 more)
libs/optimization_lib/: CMakeLists.txt
libs/optimization_lib/include/: OptimizationUtils.h
libs/optimization_lib/include/linear_equation_solvers/: EigenSparseLinearEquationSolver.h  PardisoLinearEquationSolver.h  tryPardiso.h
libs/optimization_lib/include/minimizers/: AdamMinimizer.h  GradientDescentMinimizer.h  Minimizer.h  NewtonMinimizer.h
libs/optimization_lib/include/objective_functions/: AddingVariables.h  AuxBendingNormal.h  AuxSpherePerHinge.h  BendingEdge.h  BendingNormal.h  ClusterCenters.h  ClusterNormals.h  ClusterSpheres.h  Dirichlet.h  FixAllVertices.h  FixCenters.h  FixChosenCenters.h  FixChosenNormals.h  FixChosenSpheres.h  FixChosenVertices.h  GroupNormals.h  GroupSpheres.h  ObjectiveFunction.h  TotalObjective.h
libs/optimization_lib/include/solvers/: AdamMinimizer.h  EigenSparseSolver.h  NewtonSolver.h  solver.h
libs/optimization_lib/src/linear_equation_solvers/: EigenSparseLinearEquationSolver.cpp  PardisoLinearEquationSolver.cpp  tryPardiso.cpp
libs/optimization_lib/src/minimizers/: Minimizer.cpp
libs/optimization_lib/src/objective_functions/: AddingVariables.cpp  AllVertexPositions.cpp  AuxBendingNormal.cpp  AuxSpherePerHinge.cpp  BendingEdge.cpp  BendingNormal.cpp  ClusterCenters.cpp  ClusterNormals.cpp  ClusterSpheres.cpp  Dirichlet.cpp  FixAllVertices.cpp  FixCenters.cpp  FixChosenCenters.cpp  FixChosenNormals.cpp  FixChosenSpheres.cpp  FixChosenVertices.cpp  GroupNormals.cpp  GroupSpheres.cpp  ObjectiveFunction.cpp  PenaltyPositionalConstraints.cpp  STVK.cpp  SymmetricDirichlet.cpp  TotalObjective.cpp
libs/optimization_lib/src/solvers/: EigenSparseSolver.cpp  solver.cpp
models/: abcd.off
plugins/: CMakeLists.txt  app_utils.h  deformation_plugin.cpp  deformation_plugin.h  implot.cpp  implot.h  optimization_output.cpp  optimization_output.h  unique_colors.h
plugins/deformation_plugin/include/: app_utils.h  deformation_plugin.h  faces_group.h
plugins/deformation_plugin/src/: deformation_plugin.cpp  optimization_output.cpp
(+1937 files in other folders)
